# hpccm-multi-stage-build

./: .gitignore  README.md
hello_world_tool/: CMakeLists.txt  main.cpp
hello_world_tool/include/: hello.h
hello_world_tool/lib/: hello.cpp
multi-stage/: Dockerfile  recipe.py  singularity.def
single-stage/: Dockerfile  recipe.py  singularity.def
